2002-11-04  Richard Hult  <rhult@codefactory.se>

	* src/dh-window.c (dh_window_search): Switch to the search page
	when a search is done.

2002-11-04  Mikael Hallendal  <micke@codefactory.se>

	* configure.in: style fixes, thanks rhult.

	* hack-macros/*: Removed, not used anymore.

2002-11-04  Richard Hult  <rhult@codefactory.se>

	* src/dh-window.c (window_merge_add_widget): Remove debug.
	(window_init): Set accel group on window.

	* src/dh-search.c (dh_search_new): Expand and fill when packing
	  search entry.

	* src/dh-window.c (window_populate): HIGify, i.e. don't use
	  mnemonics for notebook page tabs.

2002-11-04  Mikael Hallendal  <micke@codefactory.se>

	* src/dh-window.c: 
	- removed unused code.
	- set history buttons unsensitive by default
	- connect to history signals.
	- show the tree by default

2002-11-03  Mikael Hallendal  <micke@codefactory.se>

	* src/dh-util.[ch]: 
	(dh_util_url_split):
	(dh_util_url_get_book_name):
	(dh_util_url_get_un_depth):
	(dh_util_url_get_anchor):
	(dh_util_uri_get_anchor):
	-Removed unused functions.
	
	* src/Makefile.am: Fix building of dh-marshal.[ch]

	* src/dh-window.c (dh_window_search): silent warning

	* ui/GNOME_DevHelp.ui:
	* ui/GNOME_DevHelp_Controller.ui:
	- Removed, not using BonoboUI anymore.

	* ui/window.ui: EggMenu UI file. 
	- Added and now includes all the UI-stuff.

	* ui/Makefile.am: Updated to remove the BonoboUI stuff and add the
	  EggMenu stuff.

	* src/dh-main.c: 
	- Needs to locate already running process and ask it to open a new
	  window instead of always start a new process. 
	- Removed all the bonobo deps.

	* src/dh-window.[ch]: Main window
	- Now using EggMenu instead of BonoboUI.
	- Still needs some work and attaching accellerators and such.
	- Removed all the bonobo dependencies.
	
	* src/dh-util.c (dh_util_uri_relative_new): 
	- Don't use GnomeVFSURI.

	* src/dh-search.[ch]: Search entry + hitlist
	- Currently doesn't export the different widgets in the API.